// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo renders the UI snapshot correctly 1`] = `
<svg
  aria-hidden={false}
  className="chakra-icon css-1grhd2q"
  focusable={false}
  id="test-logo"
  role="img"
  title="nyplFullBlack logo"
  viewBox="0 0 24 24"
>
  <g
    stroke="currentColor"
    strokeWidth="1.5"
  >
    <path
      d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
      fill="none"
      strokeLinecap="round"
    />
    <path
      d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
      fill="currentColor"
      strokeLinecap="round"
    />
    <circle
      cx="12"
      cy="12"
      fill="none"
      r="11.25"
      strokeMiterlimit="10"
    />
  </g>
</svg>
`;

exports[`Logo renders the UI snapshot correctly 2`] = `
<svg
  aria-hidden={false}
  className="chakra-icon css-1grhd2q"
  focusable={false}
  id="test-logo-size"
  role="img"
  title="nyplFullBlack logo"
  viewBox="0 0 24 24"
>
  <g
    stroke="currentColor"
    strokeWidth="1.5"
  >
    <path
      d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
      fill="none"
      strokeLinecap="round"
    />
    <path
      d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
      fill="currentColor"
      strokeLinecap="round"
    />
    <circle
      cx="12"
      cy="12"
      fill="none"
      r="11.25"
      strokeMiterlimit="10"
    />
  </g>
</svg>
`;

exports[`Logo renders the UI snapshot correctly 3`] = `
<svg
  aria-hidden={false}
  className="chakra-icon css-1ayys74"
  focusable={false}
  id="chakra"
  role="img"
  title="nyplFullBlack logo"
  viewBox="0 0 24 24"
>
  <g
    stroke="currentColor"
    strokeWidth="1.5"
  >
    <path
      d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
      fill="none"
      strokeLinecap="round"
    />
    <path
      d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
      fill="currentColor"
      strokeLinecap="round"
    />
    <circle
      cx="12"
      cy="12"
      fill="none"
      r="11.25"
      strokeMiterlimit="10"
    />
  </g>
</svg>
`;

exports[`Logo renders the UI snapshot correctly 4`] = `
<svg
  aria-hidden={false}
  className="chakra-icon css-1grhd2q"
  data-testid="props"
  focusable={false}
  id="props"
  role="img"
  title="nyplFullBlack logo"
  viewBox="0 0 24 24"
>
  <g
    stroke="currentColor"
    strokeWidth="1.5"
  >
    <path
      d="M9,9a3,3,0,1,1,4,2.829,1.5,1.5,0,0,0-1,1.415V14.25"
      fill="none"
      strokeLinecap="round"
    />
    <path
      d="M12,17.25a.375.375,0,1,0,.375.375A.375.375,0,0,0,12,17.25h0"
      fill="currentColor"
      strokeLinecap="round"
    />
    <circle
      cx="12"
      cy="12"
      fill="none"
      r="11.25"
      strokeMiterlimit="10"
    />
  </g>
</svg>
`;
